Hack to force that the new Boost installation is used. (TODO: Works for me now, but should be replaced later.)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,18 @@ include_directories ("src")
 include_directories ("examples")
 include_directories ("test")
 
+# HACK: Do not use the outdated Boost version 1.46 that comes along
+#       with Mint but try to use a more recent one.
+# TODO: What is the right way?
+IF (IS_DIRECTORY "/opt/boost")
+  include_directories ("/opt/boost")
+  link_directories("/opt/boost/lib")
+ENDIF (IS_DIRECTORY "/opt/boost")
+
 # -DTREEBEARD_HAVE_EDITLINE is a HACK
 add_definitions(-std=c++11 -g -Wall -DTREEBEARD_HAVE_EDITLINE)
+# TODO: Works for now but it would be nice to support to
+#       link agains readline if its GPL license is not a problem.
 
 set (TREEBEARD_SRC
      src/treebeard.h
@@ -20,6 +30,8 @@ set (TREEBEARD_SRC
      src/treebeard/exceptions.h
      src/treebeard/input.h
      src/treebeard/input.cpp
+     src/treebeard/file_option.h
+     src/treebeard/file_option.cpp
      src/treebeard/option_description.h
      src/treebeard/option_tree.h
      src/treebeard/option_tree.cpp
@@ -28,7 +40,7 @@ set (TREEBEARD_SRC
     )
 
 add_library (treebeard ${TREEBEARD_SRC})
-target_link_libraries (treebeard edit curses)
+target_link_libraries (treebeard edit curses boost_filesystem boost_system)
 
 add_executable(calculator examples/calculator.cpp)
 target_link_libraries(calculator treebeard)
